# PhragmoplastCurvatureCalculator

./: CMakeLists.txt  Classes.py  Imports.py  PCC.ipynb  PCC.py  README.md  Settings.py  main.cpp  main.h  main.hpp  rotate.py  temp.py
Data/: lue1 10 xy.txt  lue1 11 xy.txt  lue1 12 xy.txt
